// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QandA Component Testing renders the Answer Modal component correctly 1`] = `
<div
  className="qModalBackground"
>
  <div
    className="qModalContainer"
  >
    <button
      className="qAModalButtonX"
      onClick={[Function]}
    >
      X
    </button>
    <h5>
      Submit your Answer
    </h5>
    <p>
      : 
    </p>
    <form>
      <div>
        <label>
          Your Answer*
        </label>
        <textarea
          className="qAModalForm1"
          onChange={[Function]}
          type="text"
        />
      </div>
      <div>
        <label>
          What is your nickname*
        </label>
        <input
          className="qAModalForm2"
          onChange={[Function]}
          placeholder="Example: jack543!"
          type="text"
        />
      </div>
      <div>
        <p>
          For privacy reasons, do not use your full name or email address
        </p>
      </div>
      <div>
        <label>
          Your email*
        </label>
        <input
          className="qAModalForm3"
          onChange={[Function]}
          placeholder="Why did you like the product or not?"
          type="text"
        />
      </div>
      <div>
        <p>
          For authentication reasons, you will not be emailed
        </p>
      </div>
      <div>
        <label>
          Upload your photos
        </label>
        <button>
          upload photos here
        </button>
      </div>
      <div>
        <input
          className="qButton"
          onClick={[Function]}
          type="submit"
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`QandA Component Testing renders the QandA component correctly 1`] = `
<div
  className="q_and_a"
>
  <h6>
    QUESTIONS & ANSWERS
  </h6>
  <div
    className="qSearchForm"
  >
    <form>
      <input
        className="qSearch"
        onChange={[Function]}
        placeholder="HAVE A QUESTION? SEARCH FOR ANSWERS..."
        type="text"
      />
    </form>
  </div>
  <div>
    <div />
  </div>
  <div />
  <button
    className="qButton"
    onClick={[Function]}
  >
    ADD A QUESTION +
  </button>
</div>
`;

exports[`QandA Component Testing renders the Questions Modal component correctly 1`] = `
<div
  className="qModalBackground"
>
  <div
    className="qModalContainer"
  >
    <button
      className="qAModalButtonX"
      onClick={[Function]}
    >
      X
    </button>
    <h5>
      Ask Your Question
    </h5>
    <p />
    <div>
      <form>
        <div>
          <label>
            Your Question*
          </label>
          <textarea
            className="qAModalForm1"
            onChange={[Function]}
            type="text"
          />
        </div>
        <div>
          <label>
            What is your nickname*
          </label>
          <input
            className="qAModalForm2"
            onChange={[Function]}
            placeholder="Example: jackson11!"
            type="text"
          />
        </div>
        <div>
          <p>
            For privacy reasons, do not use your full name or email address
          </p>
        </div>
        <div>
          <label>
            Your email*
          </label>
          <input
            className="qAModalForm3"
            onChange={[Function]}
            placeholder="Why did you like the product or not?"
            type="text"
          />
        </div>
        <div>
          <p>
            “For authentication reasons, you will not be emailed”
          </p>
        </div>
        <div>
          <input
            className="qButton"
            onClick={[Function]}
            type="submit"
          />
        </div>
      </form>
    </div>
  </div>
</div>
`;
